# SheepRender

./: CMakeLists.txt  README.md  main.cpp  main.h  sheep_render.cpp  sheep_render.h  sr_camera.h  sr_color.h  sr_input.h  sr_light.h  sr_macro.h  sr_math.h  sr_matrix.h  sr_mesh.h  sr_obj_loader.h  sr_object.h  sr_object_mgr.h  sr_render.h  sr_screen.h  sr_texcoord.h  sr_texture_2d.h  sr_transform.h  sr_vector.h  sr_vertex.h
asset_loader/: sr_obj_loader.h
base_data/: sr_input.h  sr_screen.h  sr_texture_2d.h
component/: sr_component.h  sr_mesh.h  sr_transform.h
math/: sr_math.h  sr_matrix.h  sr_vector.h
object/: sr_object.h  sr_object_mgr.h
render/: sr_barycentric_render.h  sr_base_render.h  sr_depth_render.h  sr_edge_equation_render.h  sr_mesh_render.h  sr_object_render.h  sr_render.h  sr_render_inc.h  sr_wireframe_render.h
shader/: sr_constant_shader.h  sr_phong_shader.h  sr_shader.h  sr_shader_inc.h
utility/: sr_clock.h  sr_singleton.h
